banner image added

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,6 +29,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 100px;
 }
 
 .nav-title {
@@ -51,4 +52,20 @@ nav a {
     text-decoration: none;
     color: #474747;
 
+}
+
+/* header related styles */
+
+.header {
+    background-color: #fff8f3;
+}
+
+.banner {
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+
+.banner .profile-pic {
+    width: 500px;
 }
