about section added

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -96,3 +96,14 @@ nav a {
     margin-bottom: 30px;
 
 }
+
+
+/* main section styles */
+
+/* about section styles */
+
+.about {
+    padding: 130px;
+    background: #fff8f3;
+
+}
