--- a/styles/styles.css
+++ b/styles/styles.css
@@ -129,3 +129,13 @@ nav a {
     text-align: center;
 
 }
+
+#what-i-do-descripption {
+    padding: 30px 150px;
+
+}
+
+.what-title {
+    text-align: center;
+
+}
