--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,10 @@ main {
     margin: 0 auto;
 }
 
+main section {
+    margin-top: 130px;
+}
+
 .text-primary {
     color: #fd6e0a;
 }
@@ -27,6 +31,8 @@ main {
     padding: 15px 30px;
 
 }
+
+
 
 /* nav related styles */
 
@@ -135,7 +141,47 @@ nav a {
 
 }
 
-.what-title {
+.what-title,
+.section-title {
     text-align: center;
 
+}
+
+/* skills-conteinr styles */
+
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+
+}
+
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+
+}
+
+.skill-description {
+    color: #757575;
+}
+
+/* resume styles  */
+
+.resume-section {
+    /* text-align: center;
+    align-items: center; */
+}
+
+.resume-container {
+    display: flex;
+    gap: 30px;
+
+
+}
+
+.download-cv {
+    text-align: center;
 }
