--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,6 +30,8 @@ main section {
     font-weight: 700;
     padding: 15px 30px;
 
+
+
 }
 
 
@@ -183,5 +185,41 @@ nav a {
 }
 
 .download-cv {
+    margin-top: 15px;
     text-align: center;
+}
+
+/* footer styles */
+
+footer {
+    display: flex;
+    gap: 100px;
+    background: #fff8f3;
+    margin-top: 100px;
+    padding: 130px 200px;
+}
+
+.footer-column {
+    width: 50%;
+}
+
+.social-links a {
+    margin-right: 25px;
+}
+
+.social-links {
+    margin-left: 50px;
+}
+
+.contact input[type="text"],
+input[type="email"],
+textarea {
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border: radius 5px;
+    background: #FFF;
+    border: 0;
+    width: 100%;
 }
